[package]
name = "rebuild-rs"
version = "0.1.0"
authors = ["ilmoi <iljamoi@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# needed for honggfuzz but not cargo-fuzz
[workspace]
members = [
    "hfuzz"
]

[features]
no-entrypoint = [] #disables the entrypoint module in lib.rs
test-bpf = [] #prevents test from being run by NOT cargo test-bpf
fuzz = ["arbitrary"] #enables stuff needed for fuzzer to work correctly

[dependencies]
thiserror = "1.0.23"
num-traits = "0.2"
num-derive = "0.3"

# solana
solana-program = "1.5.6"
spl-token = { version = "3.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }

# de/serialization
arrayref = "0.3.6"
borsh = "0.9.1"
bincode = "1.3.3"
serde = { version="1.0.126", features=["derive"] }

# fuzzing
arbitrary = { version="1", optional=true, features=["derive"] }
honggfuzz = { version = "0.5", optional = true }

[dev-dependencies]
solana-sdk = "1.5.6"
solana-client = "1.7.6"
solana-program-test = "1.5.6"
tokio = { version = "1.0", features = ["macros"]}

[lib]
crate-type = ["cdylib", "lib"]
